@@ -1,13 +1,25 @@
+/*
+ * Copyright 2018 UANGEL
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
 package com.thing2x.smqd.util;
-import java.io.IOException;
-import java.security.GeneralSecurityException;
+
 import javax.crypto.Cipher;
 import javax.crypto.spec.SecretKeySpec;
-
-// TODO: change Base64 codec
-import sun.misc.BASE64Encoder;
-import sun.misc.BASE64Decoder;
-
+import java.security.GeneralSecurityException;
+import java.util.Base64;
 
 /**
  *
@@ -34,17 +46,16 @@ public class BlowfishWrapper {
     return cipher.doFinal(encryptedText);
   }
 
-  public String encodeWithBASE64(byte[] plainText) throws GeneralSecurityException
+  public String encodeWithBASE64(byte[] plainText)
   {
-    BASE64Encoder encoder = new BASE64Encoder();
-    return encoder.encode(encode(plainText));
+    return new String(Base64.getEncoder().encode(plainText));
   }
 
-  public byte[] decodeWithBASE64(String encryptedText) throws GeneralSecurityException, IOException
+  public byte[] decodeWithBASE64(String encryptedText) throws GeneralSecurityException
   {
-    BASE64Decoder decoder = new BASE64Decoder();
+    Base64.Decoder decoder = Base64.getDecoder();
     cipher.init(Cipher.DECRYPT_MODE, skeySpec);
-    return cipher.doFinal(decoder.decodeBuffer(encryptedText));
+    return cipher.doFinal(decoder.decode(encryptedText));
   }
 
 }
